plugins/kotlin/idea/tests/testData/highlighterMetaInfo/InaccessibleExpression.kt.highlighting
// IGNORE_FIR

interface <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_TRAIT'")!>Zoo<!><<!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_TYPE_PARAMETER'")!>T<!>> {
    <!HIGHLIGHTING("severity='ERROR'; descr='[WRONG_MODIFIER_TARGET] Modifier 'inner' is not applicable to 'enum class''; textAttributesKey='ERRORS_ATTRIBUTES'"), HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_BUILTIN_ANNOTATION'")!>inner<!> <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_BUILTIN_ANNOTATION'")!>enum<!> class <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_ENUM'")!>Var<!> : <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_TRAIT'")!>Zoo<!><<!HIGHLIGHTING("severity='ERROR'; descr='[INACCESSIBLE_OUTER_CLASS_EXPRESSION] Expression is inaccessible from a nested class 'Var''; textAttributesKey='ERRORS_ATTRIBUTES'")!>T<!>>
}

object <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_OBJECT'")!>Outer<!> {
    fun <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_FUNCTION_DECLARATION'")!>bar<!>() = <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_OBJECT'")!>Unit<!>
    class <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_CLASS'")!>Inner<!>  {
        fun <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_FUNCTION_DECLARATION'")!>foo<!>() = this<!HIGHLIGHTING("severity='ERROR'; descr='[INACCESSIBLE_OUTER_CLASS_EXPRESSION] Expression is inaccessible from a nested class 'Inner''; textAttributesKey='ERRORS_ATTRIBUTES'"), HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_LABEL'")!>@Outer<!>.<!HIGHLIGHTING("severity='ERROR'; descr='[DEBUG] Reference is not resolved to anything, but is not marked unresolved'; textAttributesKey='KOTLIN_DEBUG_INFO'")!>bar<!>()
    }
}
